--- a/repo.yaml
+++ b/repo.yaml
@@ -79,9 +79,9 @@ demos:
   replicator-etl:
   - tungsten :  [mysql-mysql, mysql-hadoop, mysql-clickhouse, kafka-hdfs]
   
-benchmarks: 
-  databases:
-  - clickhouse: [standard, large, custom]
+#benchmarks: 
+#  databases:
+#  - clickhouse: [standard, large, custom]
 
   
  ## -- end of repo.yaml
